samples/product-catalogue/istio-manifests/smoke-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: smoke-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  # - port:
  #     number: 80
  #     name: http
  #     protocol: HTTP
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: primary-tls-secret
    hosts:
#Ingress Gateway DNS host of Primary Cluster
    # - "smoke-mesh.internal.spoke.com"
    - "smoke-mesh.<dns-name>"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: smoke-virtual-service
spec:
  hosts:
#Ingress Gateway DNS host of Primary Cluster
  # - "smoke-mesh.internal.spoke.com"
  - "smoke-mesh.<dns-name>"
  gateways:
  - smoke-gateway
  http:  
  #Smoke service
  - match:  
    - uri:
        prefix: /healthz
    rewrite:
      uri: /
    route:
    - destination:
        host: nginx-svc
        port:
          number: 80
